fix spot-bug related issue